[package]
name = "cloud-code"
version = "0.1.3"
authors = ["Yieazy <yuitta@163.com>", "jerry-yu <yubo@rivtower.com>"]
edition = "2018"
license = "Apache-2.0"
description = "the status_code used for transfer status between cita-cloud's micro server"
repository = "https://github.com/cita-cloud/status_code"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
cita_cloud_proto = "=6.3.0"
