[package]
name = "cloud-code"
version = "0.3.0"
authors = ["Yieazy <yuitta@163.com>", "jerry-yu <yubo@rivtower.com>"]
edition = "2021"
license = "Apache-2.0"
description = "the status_code used for transfer status between cita-cloud's micro server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
cita_cloud_proto = { branch = "upgrade-tonic-prost", git = "https://github.com/cita-cloud/cita_cloud_proto" }
